// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test generator cases test getMWACases 1`] = `
[
  {
    "buildTools": "webpack",
    "language": "ts",
    "packageManager": "npm",
    "solution": "mwa",
  },
  {
    "buildTools": "webpack",
    "language": "js",
    "packageManager": "npm",
    "solution": "mwa",
  },
  {
    "buildTools": "webpack",
    "language": "js",
    "packageManager": "yarn",
    "solution": "mwa",
  },
  {
    "buildTools": "rspack",
    "language": "ts",
    "packageManager": "npm",
    "solution": "mwa",
  },
  {
    "buildTools": "webpack",
    "language": "js",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
  {
    "buildTools": "rspack",
    "language": "ts",
    "packageManager": "yarn",
    "solution": "mwa",
  },
  {
    "buildTools": "rspack",
    "language": "js",
    "packageManager": "npm",
    "solution": "mwa",
  },
  {
    "buildTools": "webpack",
    "language": "ts",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
  {
    "buildTools": "rspack",
    "language": "ts",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
  {
    "buildTools": "rspack",
    "language": "js",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
  {
    "buildTools": "webpack",
    "language": "ts",
    "packageManager": "yarn",
    "solution": "mwa",
  },
  {
    "buildTools": "rspack",
    "language": "js",
    "packageManager": "yarn",
    "solution": "mwa",
  },
]
`;

exports[`test generator cases test getModuleCases 1`] = `
[
  {
    "language": "js",
    "packageManager": "yarn",
    "solution": "module",
  },
  {
    "language": "js",
    "packageManager": "npm",
    "solution": "module",
  },
  {
    "language": "ts",
    "packageManager": "yarn",
    "solution": "module",
  },
  {
    "language": "ts",
    "packageManager": "pnpm",
    "solution": "module",
  },
  {
    "language": "js",
    "packageManager": "pnpm",
    "solution": "module",
  },
  {
    "language": "ts",
    "packageManager": "npm",
    "solution": "module",
  },
]
`;

exports[`test generator cases test getModuleNewCases 1`] = `
[
  {
    "actionType": "function",
    "function": "tailwindcss",
  },
  {
    "actionType": "function",
    "function": "storybookV7",
  },
  {
    "actionType": "function",
    "function": "runtimeApi",
  },
  {
    "actionType": "function",
    "function": "module_doc",
  },
]
`;
